--- a/package.json
+++ b/package.json
@@ -1,39 +1,24 @@
 {
-  "name": "zephyrus-designs",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "start": "next start"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.0.0",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
-    "@trpc/react": "^9.25.3",
-    "@trpc/server": "^9.25.3",
-    "next": "12.2.0",
-    "next-auth": "^4.9.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.39.1",
-    "superjson": "^1.9.1",
-    "zod": "^3.17.3"
+    "next": "latest",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
+    "@types/node": "17.0.35",
+    "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "prisma": "^4.0.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
+    "prettier": "2.7.1",
+    "tailwindcss": "^3.1.2",
+    "typescript": "4.7.2"
   }
 }
