--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.2",
+    "@sanity/image-url": "^1.0.1",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "next": "latest",
+    "next-sanity": "^0.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-portable-text": "^0.4.3",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
